--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.6"
+    "mongoose": "^5.0.6",
+    "querymen": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.15.1"
