--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.1.1",
     "mongo-sanitize": "^1.0.0",
     "mongodb": "^3.0.2",
